feat: add admin role, KPI dashboard, and date range validation
- Add ADMIN role with full user management (create/delete any role)
- Restrict manager to create/delete developer accounts only
- Remove public self-registration; /auth/register now requires auth
- Add UserManagementPage with role-grouped tables and modals
- Rewrite manager KPI dashboard with per-dev bar charts, insights,
  and individual developer KPI cards
- Fix UTC off-by-one date display with parseLocalDate() utility
- Fix FK constraint error on task delete (clear child records first)
- Add date range validation: task dates within sprint, sprint dates
  within project (frontend + backend)
- Replace UsernameNotFoundException with ElementNotFoundException
- Map roles to ROLE_ADMIN/ROLE_MANAGER/ROLE_DEVELOPER authorities

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>